--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <section>
                     <h3>Tasks</h3><br>   
                     <ul id="fragments"> 
-                        <li class="fragment">Comparison of MetaSPAdes de novo and custom JGI pipeline assemblies.</li>
-                        <li class="fragment">Contigs binning to 16S rRNA via SPAdes assembly graph;</li>                        
+                        <li class="fragment">Comparison of MetaSPAdes de novo and custom JGI pipeline assemblies;</li>
+                        <li class="fragment">Contigs binning to 16S rRNA via SPAdes assembly graph.</li>                        
                     </ul>
                 </section>
 
@@ -109,7 +109,7 @@
                         </tbody>
                     </table>
                     <br>
-                    <small>*Covered at least 80% of sequence. 1/5 missed 16S rRNA sequences have length less than 100 bp. </small>
+                    <small>*Single scaffold covers at least 80% of sequence. 1/5 missed 16S rRNA sequences have length less than 100 bp. </small>
                 </section>
 
                 <section>
@@ -146,12 +146,12 @@
 
                 <section> 
                     <section>
-                        <h3>Direction II. Work in progress</h3>
+                        <h3>Direction II. In progress</h3>
                         <p>Assembly of full-length 16S rRNA genes via MetaSPAdes</p> 
                     </section>
 
                     <section>
-                        <h3>Simple case of assembly</h3>
+                        <h3>Simple case of </h3>
                         <p>When 16S rRNA is in a contig then one can easily <i>detect</i> it using the following tools:</p>
                         <ul id="fragments">
                             <li class="fragment">Barrnap (based on <i>NHMMER</i>) makes use of the primary structure conservation;</li>
