--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                 <section>
                     <h2>THANK YOU! QUESTIONS?</h2>
-                    <p><small><small> Hofstadter's Law: It always takes longer than you expect, even when you take into account Hofstadter's Law.</small></small></p>
+                    <p><small> Hofstadter's Law: It always takes longer than you expect, even when you take into account Hofstadter's Law.</small></p>
                 </section>
 			</div>
 		</div>
