--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </tbody>
                     </table>
                     <br>
-                    <small>*Single scaffold covers at least 80% of sequence. 1/5 missed 16S rRNA sequences have length less than 100 bp. </small>
+                    <small>*Single scaffold covers at least 80% of sequence. 311 missed 16S rRNA sequences have length less than 100 bp. </small>
                 </section>
 
                 <section>
@@ -151,7 +151,7 @@
                     </section>
 
                     <section>
-                        <h3>Simple case of </h3>
+                        <h3>Simple case</h3>
                         <p>When 16S rRNA is in a contig then one can easily <i>detect</i> it using the following tools:</p>
                         <ul id="fragments">
                             <li class="fragment">Barrnap (based on <i>NHMMER</i>) makes use of the primary structure conservation;</li>
