--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<h3>Metagenomic assembly and annotation of 16S ribosomal RNA genes by SPAdes</h3>
                     <p>
 						<h7>Created by <a href="https:/ru.linkedin.com/pub/peter-leontev/63/348/67b">Peter Leontev</a></small><br>
-                        Scientific advisors: <br>Sergey Nurk and Anton Korobeynikov, Center For Algorithmic Biotechnology SPbSU</h7>
+                        Scientific advisors: <br>Sergey Nurk and Anton Korobeynikov, <br>Center For Algorithmic Biotechnology SPbSU</h7>
 					</p>
 				</section>
 
